# django-libreport

./: .envrc  .gitignore  .travis.yml  Dockerfile  README.md  buildspec.yml  docker-compose.codebuild.yml  docker-compose.yml  pyproject.toml  requirements-build.in  requirements-build.txt  requirements.txt  setup.py  tox.ini
reports/: __init__.py  admin.py  base.py  conf.py  exceptions.py  fields.py  models.py  tasks.py  utils.py
reports/migrations/: 0001_auto_20171002_1641.py  0001_initial.py  0002_auto_20171117_1004.py  0003_auto_20171119_1232.py  0004_auto_20180502_1350.py  0005_auto_20201211_1416.py  0006_auto_20210325_2053.py  0007_auto_20220311_0537.py  0008_report_report_timezone_and_more.py  0009_report_visibility_alter_report_report_and_more.py  0010_reportschedule_visibility.py  0010_reportschedule_visibility_and_more.py
reports/runtests/: runtests.py  settings.py
reports/runtests/example/my_reports/: example.py
reports/tests/: __init__.py  models_report.py  models_schedule_report.py  test_base_report.py
