[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "django-libreport"
version = "0.0.10"
authors = [
  { name="CriticalSTART", email="infrastructure@criticalstart.com" },
]
description = "Django ap to allow creating custom reports easily"
dynamic = ["dependencies"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: Other/Proprietary License",
  "Operating System :: OS Independent",
  "Framework :: Django"
]

[project.urls]
"Homepage" = "https://github.com/AdvancedThreatAnalytics/django-libreport"

[tool.setuputils.dynamic]
dependencies = { file = ["requirements.txt"] }
